fixed color contrast in home, notifiactions, footer pages

--- a/assets/css/normal.css
+++ b/assets/css/normal.css
@@ -7,6 +7,7 @@
   --text-color: #000;
   --inv-text-color: #fff;
   --text-brand: #ff4500;
+  --hover-color: #000000;
   --nav-col: rgba(255, 255, 255, 0.8);
   /* Other CSS variables for dark mode */
 }
@@ -17,7 +18,7 @@
   --background-color-1: #303030;
   --background-color-2: #303030;
   --ab-background-color: black;
-  --hover-color: #000000;
+  --hover-color: #c30505;
   --text-color: #fff;
   --inv-text-color: #000;
   --text-brand: #fff;
@@ -86,6 +87,7 @@ a {
 
 a:hover {
   color: var(--hover-color);
+  text-decoration: underline;
 }
 
 .footer, .modal-content, .card, .notif-container, .dropdown-menu, .modal-header{
